--- a/css/style.css
+++ b/css/style.css
@@ -48,7 +48,12 @@ header h1 {
     position: absolute;
     height: 1px;
     width: 1px;
+    margin: -1px;
+    padding: 0;
     overflow: hidden;
+    clip: rect(0, 0, 0, 0);
+    white-space: nowrap;
+    border-width: 0;
 }
 
 input#searchbar, button {
