--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
+/* global config */
 * {
     margin: 0;
     padding: 0;
@@ -18,6 +19,7 @@
     --text-color: hsl(0, 0%, 19%);
 }
 
+/* document config */
 body {
     font-family: var(--primary-font);
     font-size: 1.6rem;
@@ -27,10 +29,11 @@ body {
 
 #app {
     padding: 2rem;
-    max-width: 500px;
+    max-width: 530px;
     margin: 0 auto;
 }
 
+/* header config */
 header {
     display: flex;
     justify-content: space-between;
@@ -65,9 +68,77 @@ input#searchbar {
     border-radius: 6px 0 0 6px;
 }
 
-button {
+div#search button {
     background-color: var(--primary-color);
     margin-left: -6px;
     padding: .8rem;
     border-radius: 0 6px 6px 0;
+    cursor: pointer;
+}
+
+button:hover {
+    filter: brightness(1.1);
+}
+
+/* Table config */
+table {
+    width: 100%;
+    border-collapse: collapse;
+    box-shadow: 0 1rem 2rem -1rem rgba(0, 0, 0, 0.3);
+}
+
+table th {
+    background-color: var(--primary-color);
+    text-align: left;
+    font-weight: 400;
+    padding: 1.4rem;
+}
+
+table th:first-child {
+    border-top-left-radius: .4rem;
+}
+
+table th:last-child {
+    border-top-right-radius: .4rem;
+}
+
+table tr:nth-child(even) {
+    background: #eee;
+}
+
+table tr:nth-child(odd) {
+    background: #ddd;
+}
+
+table td {
+    padding: 1.4rem;
+}
+
+td.user {
+    display: flex;
+    align-items: center;
+    gap: 1.4rem;
+}
+
+td.user img {
+    height: 5rem;
+    width: 5rem;
+    object-fit: cover;
+    border-radius: 50%;
+}
+
+td.user a {
+    text-decoration: none;
+    color: var(--text-color);
+}
+
+td.user a p {
+    font-weight: 600;    
+}
+
+td button.remove {
+    border: none;
+    background: none;
+    font-size: 1.8rem;
+    color: red;
 }
